fix minor layout problem at smaller resolution.

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -155,6 +155,7 @@ services
 
 .services ul li, .services p{
     margin-left: 3em;
+    margin-left: 4rem;
 }
 
 .services li{
